[package]
name = "sudoku"
# name = "sudoku-rust" #use to publish
version = "0.1.0"
edition = "2021"
description = "Sudoku Solver from a gist I had made in 2019 https://gist.github.com/yoyomo/a694d9e0add94537728b413bdf961064"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
gloo-utils = { version = "0.1", features = ["serde"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
